--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nft-card-react1",
   "version": "0.1.0",
-  "homepage": "https://beqa200.github.io/nft-card-react",
+  "homepage": "https://beqa200.github.io/nft-card-react/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
